--- a/RentalCarCompany/Content/Site.css
+++ b/RentalCarCompany/Content/Site.css
@@ -4,7 +4,7 @@
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
-    padding-top: 50px;
+    padding-top: 100px;
     padding-left: 15px;
     padding-right: 15px;
 }
@@ -21,4 +21,14 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+.field-validation-error,
+label.error{
+    color: brown
+}
+
+.input-validation-error,
+input.error{
+    border: 2px solid brown
 }
