--- a/RentalCarCompany/Views/Shared/_NavBarPartial.cshtml
+++ b/RentalCarCompany/Views/Shared/_NavBarPartial.cshtml
@@ -10,10 +10,10 @@
                 @Html.ActionLink("Home", "Index", "Home")
             </li>
             <li class="nav-item">
-                @Html.ActionLink("About", "About", "Home")
+                @Html.ActionLink("Customers", "Index", "Customers")
             </li>
             <li class="nav-item">
-                @Html.ActionLink("Contact", "Contact", "Home")
+                @Html.ActionLink("Cars", "Index", "Cars")
             </li>
         </ul>
         @Html.Partial("_LoginPartial")
